[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UIController.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ShopController.gd" type="Script" id=5]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="ShopController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CameraController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CameraRig" type="Spatial" parent="CameraController"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraController/CameraRig"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 75, 75 )
projection = 1
current = true
fov = 45.0
size = 15.0
near = 0.01
far = 1500.0

[node name="UIController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GameUI" type="Control" parent="UIController"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIController/GameUI"]
margin_right = 256.0
margin_bottom = 34.0

[node name="MoneyLabel" type="RichTextLabel" parent="UIController/GameUI/VBoxContainer"]
margin_right = 256.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Money: 0"

[node name="HeightLabel" type="RichTextLabel" parent="UIController/GameUI/VBoxContainer"]
margin_top = 19.0
margin_right = 256.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Height: 0"

[node name="ItemList" type="ItemList" parent="UIController/GameUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -146.0
margin_right = 259.0
margin_bottom = 147.0

[node name="Button" type="Button" parent="UIController/GameUI/ItemList"]
anchor_right = 1.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Upgrade Maximum +1 (100$)"

[node name="SegmentContainer" type="Spatial" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="UIController/GameUI/ItemList/Button" to="ShopController" method="_on_Button_pressed"]
